--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,6 @@ services:
     ports:
       - '3031:3031'
     volumes:
-      - '.:/go/src/eventsourcismo'
+      - '.:/go/src/pismevent'
     depends_on:
       - 'mongo'
